GH-79 more code clean up