@@ -5,9 +5,6 @@ import org.icepdf.core.pobjects.Name;
 import org.icepdf.core.util.Library;
 
 import java.awt.geom.AffineTransform;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashSet;
 import java.util.Set;
 import java.util.logging.Logger;
 
@@ -26,8 +23,7 @@ public class PolyAnnotation extends MarkupAnnotation {
     public static final Name SUBTYPE_POLYLINE = new Name("PolyLine");
     public static final Name SUBTYPE_POLYGON = new Name("Polygon");
 
-    public static final Set<Name> ALL_SUBTYPES = Collections.unmodifiableSet(
-            new HashSet<>(Arrays.asList(SUBTYPE_POLYLINE, SUBTYPE_POLYGON)));
+    public static final Set<Name> ALL_SUBTYPES = Set.of(SUBTYPE_POLYLINE, SUBTYPE_POLYGON);
 
     /**
      * (Required) An array of numbers (see Table 174) specifying the width and
